modified to make multiclients play this game possiblels

--- a/Board2048_Concurrency_TCP/Makefile
+++ b/Board2048_Concurrency_TCP/Makefile
@@ -1,4 +1,4 @@
-all: clean board.o main.o GameStart
+all: clean board.o main.o GameStart ClientStart
 
 # to get .o file DO NOT using "-o" while using "-c"
 # "-c" means "Just complie, Not Link"
@@ -11,6 +11,7 @@ main.o:	board.h
 	g++ -c main.cpp
 GameStart: 
 	g++ -o GameStart main.o board.o -pthread
-
+ClientStart:
+	g++ -o ClientStart client.cpp
 clean:
-	rm -rf GameStart *.o
+	rm -rf GameStart ClientStart *.o
